# haskell-pong

./: LICENSE  README.md  flake.nix  pong.cabal
.stack-work/: stack.sqlite3
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
